[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Timed Blocker.gd" type="Script" id=1]
[ext_resource path="res://sprites/timed_blocker_active.png" type="Texture" id=2]
[ext_resource path="res://sound/timed_blocker_trigger.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 6.0

[node name="Timed Blocker" type="Area2D" groups=[
"killing_entities",
"timed_entities",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="TriggerSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Timed_Blocker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
